[project]
name = "CHANGEME"
version = "0.1.0"
description = "Python base template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "httpie>=3.2.4",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "venv/",
    "alembic/versions/",
    "scripts"
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort (import sorting)
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "D", # pydocstyle
    "N", # pep8-naming
    "S", # flake8-bandit (security)
    "A", # flake8-builtins
    "COM", # flake8-commas
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PL", # pylint
]

ignore = [
    "E501", # line too long (handled by ruff format)
    "COM812", # trailing comma - conflicts with formatter
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"  # or "numpy", "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D100", "D104", "PLR0913", "ARG001"]
"alembic/env.py" = ["D100"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
exclude = "venv/"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:build/htmlcov",
]
asyncio_mode = "auto"

[tool.coverage.run]
data_file = "build/.coverage"

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "httpie>=3.2.4",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]
